--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "@eslint/eslintrc": "^3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/tomtranmer/tranmer.ca-new.git"
   }
 }
