test(ci): run npm test in CI and provide watch script

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "test:run": "vitest run"
+  "lint": "next lint",
+  "test": "vitest run",
+  "test:watch": "vitest"
   },
   "dependencies": {
     "next": "15.4.6",
