--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HOOK: ${{ secrets.VERCEL_DEPLOY_HOOK_URL_PREVIEW }}
+  PREVIEW_URL: https://tranmer-ca-new.vercel.app
     steps:
       - name: Ensure deploy hook secret is configured
         if: ${{ env.HOOK == '' }}
@@ -30,3 +31,32 @@ jobs:
           if [ "$STATUS" -lt 200 ] || [ "$STATUS" -ge 400 ]; then
             echo "::error::Vercel hook returned HTTP $STATUS" && exit 1
           fi
+
+      - name: Publish GitHub deployment link
+        if: ${{ env.HOOK != '' }}
+        uses: actions/github-script@v7
+        env:
+          PREVIEW_URL: ${{ env.PREVIEW_URL }}
+        with:
+          script: |
+            const { data: deployment } = await github.rest.repos.createDeployment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.ref.replace('refs/heads/',''),
+              auto_merge: false,
+              required_contexts: [],
+              environment: 'preview',
+              description: 'Vercel Preview',
+              transient_environment: true,
+              production_environment: false,
+            })
+            await github.rest.repos.createDeploymentStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              deployment_id: deployment.id,
+              state: 'success',
+              environment: 'preview',
+              environment_url: process.env.PREVIEW_URL,
+              log_url: `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
+              description: 'Preview deployment triggered'
+            })
