--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,24 +12,24 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/icon-192.svg",
+      "src": "/icons/pwa/icon-192.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512.svg", 
+      "src": "/icons/pwa/icon-512.svg", 
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/apple-touch-icon.svg",
+      "src": "/icons/pwa/apple-touch-icon.svg",
       "sizes": "180x180",
       "type": "image/svg+xml"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/icons/pwa/favicon.ico",
       "sizes": "16x16 32x32",
       "type": "image/x-icon"
     }
